--- a/NASFECO/static/css/style.css
+++ b/NASFECO/static/css/style.css
@@ -36,6 +36,7 @@ header {
 }
 
 /* Navegación */
+
 nav ul {
     list-style: none;
     display: flex;
@@ -71,11 +72,31 @@ nav a:hover {
     background: linear-gradient(135deg, #56cfe1, #48bfe3);
     color: white;
 }
+.ul2{
+    list-style: none;
+}
+.hero2 {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    padding: 50px;
+    background: linear-gradient(135deg, blue, blue);
+    color: white;
+}
+.hero3 {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    padding: 50px;
+    background: linear-gradient(135deg, white, white);
+    color: black;
+}
 
 .hero-text {
     max-width: 50%;
 }
-
 .hero-text h2 {
     font-size: 2.5rem;
     margin-bottom: 20px;
@@ -127,4 +148,46 @@ footer {
         flex-direction: column;
         gap: 10px;
     }
+}
+
+
+
+
+/* Estilos para la tabla */
+table {
+    width: 90%;
+    color: black;
+    margin: 20px auto;
+    border-collapse: collapse;
+    background-color: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Encabezados de la tabla */
+thead {
+    background-color: #0044cc;
+    color: white;
+}
+
+th, td {
+    padding: 12px;
+    border: 1px solid #ddd;
+    text-align: center;
+}
+
+/* Estilos para filas alternas */
+tbody tr:nth-child(odd) {
+    background-color: #f9f9f9;
+}
+
+/* Hover sobre las filas */
+tbody tr:hover {
+    background-color: #f1f1f1;
+}
+
+/* Caption de la tabla */
+caption {
+    font-size: 1.2em;
+    font-weight: bold;
+    margin: 10px;
 }
