--- a/NASFECO/static/css/style.css
+++ b/NASFECO/static/css/style.css
@@ -17,7 +17,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 15px 30px;
-    background-color: #ffffff; /* Fondo blanco */
+    background-color: #ffffff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     position: sticky;
     top: 0;
@@ -30,7 +30,7 @@ header {
 }
 
 .logo img {
-    height: 40px; /* Tamaño ajustado */
+    height: 40px;
     width: auto;
     margin-right: 15px;
 }
@@ -43,14 +43,14 @@ nav ul {
 }
 
 nav a {
-    color: #023e8a; /* Azul oscuro */
+    color: #023e8a;
     text-decoration: none;
     font-weight: bold;
     transition: color 0.3s;
 }
 
 nav a:hover {
-    color: #7209b7; /* Púrpura al pasar el mouse */
+    color: #7209b7;
 }
 
 .whatsapp-icon img {
@@ -62,14 +62,72 @@ nav a:hover {
     transform: scale(1.1);
 }
 
+/* Sección de Introducción */
+.intro {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    z-index: -1;
+}
+
+/* Imagen de fondo */
+.intro-overlay img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    filter: brightness(0.8);
+    position: fixed; /* Asegura que la imagen también se quede fija */
+    top: 0;
+    left: 0;
+}
+
+/* Contenedor para centrar el h1 dentro de la imagen */
+.intro-overlay {
+    position: relative; /* Cambiado a relative para que se desplace */
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+/* Efecto de desplazamiento en el título */
+.intro-overlay h1 {
+    color: #fff;
+    font-size: 3.5rem;
+    text-align: center;
+    margin: 0;
+    padding: 0 20px;
+    font-weight: normal;
+    text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+    width: 100%;
+    max-width: 800px;
+    font-family: 'Times New Roman', Times, serif;
+    position: absolute; /* Cambiado a absolute */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+    transition: transform 0.1s linear; /* Transición suave */
+}
+
+
 /* Hero Section */
 .hero {
+    position: relative;
+    margin-top: 100vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 50px;
     background: linear-gradient(135deg, #56cfe1, #48bfe3);
     color: white;
+    z-index: 1;
 }
 
 .hero-text {
@@ -110,6 +168,8 @@ footer {
     padding: 15px;
     background-color: #0077b6;
     color: white;
+    position: relative;
+    z-index: 1;
 }
 
 /* Responsive */
